--- a/151_200.md
+++ b/151_200.md
@@ -286,6 +286,265 @@ Why are the other answers wrong?
 
 </details>
 
+<details>
+  <summary>Question 158</summary>
+
+A solutions architect is optimizing a website for an upcoming musical event. Videos of the performances will be streamed in real time and then will be available on demand. The event is expected to attract a global online audience.
+
+Which service will improve the performance of both the real-time and on-demand streaming?
+
+- [ ] A. Amazon CloudFront
+- [ ] B. AWS Global Accelerator
+- [ ] C. Amazon Route 53
+- [ ] D. Amazon S3 Transfer Acceleration
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] A. Amazon CloudFront
+
+Why this is the correct answer:
+
+- [ ] Amazon CloudFront for On-Demand and Real-Time Streaming: Amazon CloudFront is a global content delivery network (CDN) service that is designed to deliver data, videos, applications, and APIs to customers globally with low latency and high transfer speeds.
+- [ ] On-Demand Streaming: For on-demand video (e.g., recordings of performances stored in Amazon S3), CloudFront caches the content at its numerous edge locations worldwide. When users request the video, it's served from the edge location closest to them, significantly reducing latency and improving playback performance.
+- [ ] Real-Time Streaming: CloudFront can also be used to distribute live video streams. It supports common streaming protocols and can work with live origins (like AWS Elemental MediaStore or other media servers) to deliver real-time streams to a global audience with lower latency by leveraging its edge network.
+- [ ] Global Audience and Performance: Given the "global online audience," CloudFront's geographically distributed edge locations are key to providing a consistent, low-latency viewing experience for both types of video content.
+
+Why are the other answers wrong?
+
+- [ ] Option B is wrong because: AWS Global Accelerator improves the availability and performance of your applications by providing static IP addresses and routing traffic over the AWS global network to optimal application endpoints (like Load Balancers or EC2 instances). While it can accelerate traffic to your application origin and is beneficial for certain types of real-time applications (like gaming or some live video contribution), Amazon CloudFront is more specifically designed for caching and delivering video content (both on-demand and live streams) at the edge to a global audience. For video streaming, CloudFront's caching and delivery optimization are typically more impactful.
+- [ ] Option C is wrong because: Amazon Route 53 is a scalable Domain Name System (DNS) web service. It translates domain names into IP addresses and can route users to different endpoints based on various routing policies (e.g., latency-based, geoproximity). While Route 53 is essential for directing users to the correct CloudFront distribution or Global Accelerator endpoint, it does not itself cache content or improve the actual streaming performance by bringing content closer to users in the way a CDN does.
+- [ ] Option D is wrong because: Amazon S3 Transfer Acceleration is a feature that speeds up file uploads to Amazon S3 over long distances by using CloudFront's edge locations as an entry point to the AWS network. It does not improve the performance of downloading or streaming content from S3 to users globally. For delivering content from S3 to users, a full CloudFront distribution is the appropriate service.
+
+</details>
+
+<details>
+  <summary>Question 159</summary>
+
+A company is running a publicly accessible serverless application that uses Amazon API Gateway and AWS Lambda. The application's traffic recently spiked due to fraudulent requests from botnets.
+
+Which steps should a solutions architect take to block requests from unauthorized users? (Choose two.)
+
+- [ ] A. Create a usage plan with an API key that is shared with genuine users only.
+- [ ] B. Integrate logic within the Lambda function to ignore the requests from fraudulent IP addresses.
+- [ ] C. Implement an AWS WAF rule to target malicious requests and trigger actions to filter them out.
+- [ ] D. Convert the existing public API to a private API. Update the DNS records to redirect users to the new API endpoint.
+- [ ] E. Create an IAM role for each user attempting to access the API. A user will assume the role when making the API call.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] A. Create a usage plan with an API key that is shared with genuine users only.
+- [ ] C. Implement an AWS WAF rule to target malicious requests and trigger actions to filter them out.
+
+Why these are the correct answers:
+
+These two solutions provide effective mechanisms at the API Gateway and edge level to control access and filter malicious traffic:
+
+A. Create a usage plan with an API key that is shared with genuine users only.
+- [ ] API Keys for Authentication/Authorization: Amazon API Gateway allows you to create API keys and associate them with usage plans. You can then require clients to send a valid API key in their requests.
+- [ ] By distributing API keys only to genuine users or client applications, you can ensure that requests without a valid key (or with a revoked key) are rejected by API Gateway.
+- [ ] Throttling and Quotas: Usage plans also allow you to set throttling limits and quotas on a per-API key basis, which can help mitigate abuse from a compromised key or a single misbehaving client.
+
+C. Implement an AWS WAF rule to target malicious requests and trigger actions to filter them out.
+- [ ] AWS WAF for Web Exploit and Bot Protection: AWS WAF is a web application firewall that integrates with Amazon API Gateway (and other services like CloudFront and Application Load Balancer).
+- [ ] It allows you to create rules to filter web traffic based on various conditions, such as IP addresses, HTTP headers, HTTP body, URI strings, SQL injection, and cross-site scripting.
+- [ ] Blocking Botnets: You can use AWS WAF with AWS Managed Rules (like the Bot Control rule set or IP reputation lists) or create custom rules to identify and block traffic originating from known botnets or exhibiting bot-like behavior.
+- [ ] This filtering happens before requests hit your API Gateway methods or Lambda functions.
+- [ ] Combining these two provides layered security: WAF for broad filtering of malicious traffic and botnets, and API keys/usage plans for more granular access control for legitimate clients.
+
+Why are the other answers wrong?
+
+- [ ] Option B is wrong because: Implementing IP address filtering logic directly within the AWS Lambda function means that the Lambda function is still invoked for every request, including fraudulent ones. This consumes Lambda resources, incurs costs for each invocation, and makes the Lambda function more complex. It's more efficient and cost-effective to block malicious traffic at an earlier stage, like with AWS WAF or API Gateway configurations.
+- [ ] Option D is wrong because: Converting a publicly accessible API to a private API makes it accessible only from within your VPC (using VPC endpoints) or via specific private network connections. This would block all public internet traffic, including legitimate users, unless a complex and potentially costly frontend solution is built to bridge public access to the private API. This is not a suitable solution for protecting a "publicly accessible serverless application" from botnets while maintaining public access.
+- [ ] Option E is wrong because: Using IAM roles for each individual user to access a public API is generally not a scalable or practical authentication mechanism for a large number of external users. IAM roles are more typically used for granting permissions to AWS services or applications, or for federated enterprise users. For authenticating end-users of a public API, solutions like Amazon Cognito user pools (which can be integrated with API Gateway) or API keys are more appropriate. Managing individual IAM roles for potentially thousands or millions of public users would be an operational nightmare.
+
+</details>
+
+<details>
+  <summary>Question 160</summary>
+
+An ecommerce company hosts its analytics application in the AWS Cloud. The application generates about 300 MB of data each month. The data is stored in JSON format. The company is evaluating a disaster recovery solution to back up the data. The data must be accessible in milliseconds if it is needed, and the data must be kept for 30 days.
+
+Which solution meets these requirements MOST cost-effectively?
+
+- [ ] A. Amazon OpenSearch Service (Amazon Elasticsearch Service)
+- [ ] B. Amazon S3 Glacier
+- [ ] C. Amazon S3 Standard
+- [ ] D. Amazon RDS for PostgreSQL
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] C. Amazon S3 Standard
+
+Why this is the correct answer:
+
+- [ ] Amazon S3 Standard for Accessibility and Cost-Effectiveness:
+- [ ] Accessible in Milliseconds: Amazon S3 Standard provides low-latency access to data, typically in milliseconds, which meets the requirement for quick accessibility.
+- [ ] Suitable for Data Volume and Retention: For a relatively small amount of data (300 MB per month) that needs to be kept for only 30 days and requires fast access, S3 Standard is a very cost-effective storage option. It has no retrieval fees, which is beneficial if the data might be needed.
+- [ ] Durability for Backups: S3 Standard is designed for high durability (99.999999999%) and stores data across multiple Availability Zones, making it a reliable choice for storing backups.
+- [ ] JSON Format: S3 is well-suited for storing files in any format, including JSON.
+- [ ] This solution directly meets the accessibility, retention, and cost-effectiveness requirements for this specific scenario.
+
+Why are the other answers wrong?
+
+- [ ] Option A is wrong because: Amazon OpenSearch Service (formerly Amazon Elasticsearch Service) is primarily a search and analytics engine. While it can store JSON data, using it as a primary backup solution for 300 MB of data per month where the main requirements are millisecond access for 30 days and cost-effectiveness is likely overkill. OpenSearch Service involves running a cluster, which incurs instance costs and can be more expensive than S3 Standard for simple backup storage.
+- [ ] Option B is wrong because: Amazon S3 Glacier (referring to S3 Glacier Flexible Retrieval or S3 Glacier Deep Archive) is designed for low-cost, long-term data archiving where retrieval times of minutes to hours (or even longer for Deep Archive) are acceptable. It does not meet the requirement that "data must be accessible in milliseconds if it is needed." (Note: S3 Glacier Instant Retrieval does offer millisecond access from an archive tier, but for data kept only 30 days with potential need for immediate access, S3 Standard is often simpler and its storage cost for this short duration is competitive without involving specific archive tier considerations unless access is truly rare).
+- [ ] Option D is wrong because: Amazon RDS for PostgreSQL is a relational database service. Storing 300 MB of JSON backup data in a relational database is generally not the most straightforward or cost-effective approach compared to object storage like S3. While PostgreSQL supports JSON data types, using RDS as a backup target for files in this manner adds unnecessary complexity and cost associated with running a database instance.
+
+</details>
+
+<details>
+  <summary>Question 161</summary>
+
+A company has a small Python application that processes JSON documents and outputs the results to an on-premises SQL database. The application runs thousands of times each day. The company wants to move the application to the AWS Cloud. The company needs a highly available solution that maximizes scalability and minimizes operational overhead.
+
+Which solution will meet these requirements?
+
+- [ ] A. Place the JSON documents in an Amazon S3 bucket. Run the Python code on multiple Amazon EC2 instances to process the documents. Store the results in an Amazon Aurora DB cluster.
+- [ ] B. Place the JSON documents in an Amazon S3 bucket. Create an AWS Lambda function that runs the Python code to process the documents as they arrive in the S3 bucket. Store the results in an Amazon Aurora DB cluster.
+- [ ] C. Place the JSON documents in an Amazon Elastic Block Store (Amazon EBS) volume. Use the EBS Multi-Attach feature to attach the volume to multiple Amazon EC2 instances. Run the Python code on the EC2 instances to process the documents. Store the results on an Amazon RDS DB instance.
+- [ ] D. Place the JSON documents in an Amazon Simple Queue Service (Amazon SQS) queue as messages. Deploy the Python code as a container on an Amazon Elastic Container Service (Amazon ECS) cluster that is configured with the Amazon EC2 launch type. Use the container to process the SQS messages. Store the results on an Amazon RDS DB instance.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] B. Place the JSON documents in an Amazon S3 bucket. Create an AWS Lambda function that runs the Python code to process the documents as they arrive in the S3 bucket. Store the results in an Amazon Aurora DB cluster.
+
+Why this is the correct answer:
+
+This solution leverages serverless and managed services to meet all requirements efficiently:
+
+- [ ] Amazon S3 for Storing JSON Documents: Amazon S3 is an excellent choice for storing the input JSON documents. It's highly durable, scalable, and can trigger events.
+- [ ] AWS Lambda for Processing: An AWS Lambda function can be written in Python to process the JSON documents. Lambda is serverless, meaning you don't manage any servers. It automatically scales based on the number of incoming events (e.g., new documents arriving in S3), thus maximizing scalability. Since it runs "thousands of times each day" (implying event-driven processing), Lambda is a perfect fit. This also "minimizes operational overhead."
+- [ ] S3 Event Trigger: S3 can be configured to automatically trigger the Lambda function whenever a new JSON document is uploaded to the bucket. This creates an event-driven processing pipeline.
+- [ ] Amazon Aurora for SQL Database: Amazon Aurora is a fully managed, relational database service compatible with MySQL and PostgreSQL. It provides high availability (e.g., with Multi-AZ configurations or Aurora Replicas), scalability, and significantly reduces operational overhead compared to managing an on-premises SQL database or a database on EC2. Migrating the output to Aurora meets the need for a SQL database in the cloud.
+- [ ] This architecture (S3 for input, Lambda for processing, Aurora for output) is highly available, scales seamlessly, and has minimal operational overhead.
+
+Why are the other answers wrong?
+
+- [ ] Option A is wrong because: Running the Python code on multiple Amazon EC2 instances to process the documents involves managing those instances (patching, scaling, operating systems). This incurs more operational overhead than using serverless AWS Lambda. While scalable with Auto Scaling, Lambda offers better operational efficiency for this event-driven task.
+- [ ] Option C is wrong because:
+Storing JSON documents that need to be processed by multiple instances on a single EBS volume (even with Multi-Attach) is generally less scalable and more complex than using Amazon S3 as the source. EBS Multi-Attach has limitations (e.g., only for io1/io2 volumes, within the same AZ, specific instance types) and requires a file system that supports concurrent access.
+It still relies on EC2 instances, leading to higher operational overhead than Lambda.
+- [ ] Option D is wrong because:
+Placing entire JSON documents directly into SQS messages might be problematic if the documents are large, as SQS messages have a size limit (typically 256 KB). It's more common to store the documents in S3 and send a notification/pointer to SQS.
+Using Amazon ECS with the EC2 launch type for processing still involves managing the underlying EC2 instances in the cluster, which has more operational overhead than a fully serverless Lambda approach for this type of document processing task.
+
+</details>
+
+<details>
+  <summary>Question 162</summary>
+
+A company wants to use high performance computing (HPC) infrastructure on AWS for financial risk modeling. The company's HPC workloads run on Linux. Each HPC workflow runs on hundreds of Amazon EC2 Spot Instances, is short-lived, and generates thousands of output files that are ultimately stored in persistent storage for analytics and long-term future use. The company seeks a cloud storage solution that permits the copying of on-premises data to long-term persistent storage to make data available for processing by all EC2 instances. The solution should also be a high performance file system that is integrated with persistent storage to read and write datasets and output files.
+
+Which combination of AWS services meets these requirements?
+
+- [ ] A. Amazon FSx for Lustre integrated with Amazon S3
+- [ ] B. Amazon FSx for Windows File Server integrated with Amazon S3
+- [ ] C. Amazon S3 Glacier integrated with Amazon Elastic Block Store (Amazon EBS)
+- [ ] D. Amazon S3 bucket with a VPC endpoint integrated with an Amazon Elastic Block Store (Amazon EBS) General Purpose SSD (gp2) volume
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] A. Amazon FSx for Lustre integrated with Amazon S3
+
+Why this is the correct answer:
+
+This question outlines requirements for a high-performance, scalable file system for HPC workloads, with integration for persistent storage.
+
+- [ ] Amazon FSx for Lustre for High-Performance File System: Amazon FSx for Lustre is specifically designed to provide high-performance, scalable file storage for compute-intensive workloads like HPC, financial risk modeling, machine learning, and media processing. Lustre is a popular open-source parallel file system known for its speed and scalability, making it ideal for workflows running on hundreds of EC2 instances that need fast access to shared datasets and a place to write output files quickly.
+- [ ] Integration with Amazon S3 for Persistent Storage: FSx for Lustre seamlessly integrates with Amazon S3. You can link an FSx for Lustre file system to an S3 bucket. This allows:
+- [ ] Data in S3 (e.g., on-premises data copied to S3 for long-term storage) to be transparently presented as files in the Lustre file system for processing by the EC2 Spot Instances.
+- [ ] Output files generated by the HPC jobs on FSx for Lustre to be easily written back to the linked S3 bucket for "persistent storage for analytics and long-term future use."
+- [ ] Shared Access for EC2 Instances: The FSx for Lustre file system can be mounted by hundreds of Linux-based EC2 Spot Instances, providing concurrent access to the data.
+- [ ] This combination provides both the high-performance scratch/processing file system (FSx for Lustre) and the durable, long-term persistent storage (S3), with seamless integration between them.
+
+Why are the other answers wrong?
+
+- [ ] Option B is wrong because: Amazon FSx for Windows File Server provides file storage using the SMB protocol and is designed for Windows-based applications. The company's HPC workloads run on Linux, and Lustre (as provided by FSx for Lustre) is a more common and often higher-performing file system for Linux-based HPC clusters.
+- [ ] Option C is wrong because: Amazon S3 Glacier is a low-cost archival storage service with retrieval times of minutes to hours. It is not suitable as a high-performance file system for active HPC processing. Amazon EBS provides block storage for individual EC2 instances and is not inherently a shared, distributed file system suitable for hundreds of HPC nodes without additional software and management.
+- [ ] Option D is wrong because: While S3 can be used for persistent storage and EBS for instance storage, this option doesn't describe a "high performance file system that is integrated with persistent storage" in the way FSx for Lustre provides a POSIX-compliant, high-throughput, low-latency file system layer on top of S3 for HPC workloads. Accessing S3 directly for all file I/O from hundreds of compute nodes might not provide the same performance as a dedicated Lustre file system.
+
+</details>
+
+<details>
+  <summary>Question 163</summary>
+ 
+A company is building a containerized application on premises and decides to move the application to AWS. The application will have thousands of users soon after it is deployed. The company is unsure how to manage the deployment of containers at scale. The company needs to deploy the containerized application in a highly available architecture that minimizes operational overhead.
+
+Which solution will meet these requirements?
+
+- [ ] A. Store container images in an Amazon Elastic Container Registry (Amazon ECR) repository. Use an Amazon Elastic Container Service (Amazon ECS) cluster with the AWS Fargate launch type to run the containers. Use target tracking to scale automatically based on demand.
+- [ ] B. Store container images in an Amazon Elastic Container Registry (Amazon ECR) repository. Use an Amazon Elastic Container Service (Amazon ECS) cluster with the Amazon EC2 launch type to run the containers. Use target tracking to scale automatically based on demand.
+- [ ] C. Store container images in a repository that runs on an Amazon EC2 instance. Run the containers on EC2 instances that are spread across multiple Availability Zones. Monitor the average CPU utilization in Amazon CloudWatch. Launch new EC2 instances as needed.
+- [ ] D. Create an Amazon EC2 Amazon Machine Image (AMI) that contains the container image. Launch EC2 instances in an Auto Scaling group across multiple Availability Zones. Use an Amazon CloudWatch alarm to scale out EC2 instances when the average CPU utilization threshold is breached.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] A. Store container images in an Amazon Elastic Container Registry (Amazon ECR) repository. Use an Amazon Elastic Container Service (Amazon ECS) cluster with the AWS Fargate launch type to run the containers. Use target tracking to scale automatically based on demand.
+
+Why this is the correct answer:
+
+This solution offers a serverless approach to running containers, which directly addresses the requirements for scalability, high availability, and minimized operational overhead.
+
+- [ ] Amazon Elastic Container Registry (Amazon ECR) for Image Storage: ECR is a fully managed Docker container registry that makes it easy to store, manage, share, and deploy your container images and artifacts. This is the standard and recommended place to store container images on AWS.
+- [ ] Amazon Elastic Container Service (Amazon ECS) with AWS Fargate Launch Type:
+- [ ] ECS is a fully managed container orchestration service that helps you deploy, manage, and scale containerized applications.
+- [ ] AWS Fargate is a serverless compute engine for containers that works with ECS. When you use Fargate, you don't need to provision, configure, or manage the underlying EC2 instances (servers). AWS handles all the server management, patching, and scaling of the infrastructure. This directly meets the requirement to "minimize operational overhead" and simplifies managing "deployment of containers at scale."
+- [ ] High Availability: ECS services running on Fargate can be configured to distribute tasks (your containers) across multiple Availability Zones, ensuring high availability.
+- [ ] Target Tracking Auto Scaling: ECS services can use target tracking auto scaling policies to automatically adjust the number of running tasks based on demand (e.g., CPU utilization, memory utilization, or custom metrics from Amazon CloudWatch). This ensures the application can scale to handle "thousands of users."
+
+Why are the other answers wrong?
+
+- [ ] Option B is wrong because: Using Amazon ECS with the Amazon EC2 launch type means that while ECS manages the container orchestration, the company is still responsible for provisioning, managing, patching, and scaling the underlying EC2 instances that form the ECS cluster. This incurs more operational overhead compared to the serverless Fargate launch type.
+- [ ] Option C is wrong because: Storing container images in a self-managed repository on an EC2 instance and manually running containers on EC2 instances (even across multiple AZs with some monitoring) lacks proper container orchestration. This approach has significant operational overhead for managing the repository, the EC2 instances, container lifecycles, and scaling, and it's not an effective way to manage containers "at scale."
+- [ ] Option D is wrong because: While creating an AMI with the container image and using an Auto Scaling group can scale EC2 instances, it's not the standard or most efficient way to manage containerized applications. This approach doesn't leverage a container orchestrator like ECS, making tasks like rolling updates, service discovery, and managing multiple containerized services more complex. It also means you are managing the container runtime within the AMI on each EC2 instance.
+
+</details>
+
+<details>
+  <summary>Question 164</summary>
+
+- [ ] A.  Turn  
+
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] A.  Turn
+
+
+</details>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
